update code block

--- a/modules/ROOT/pages/writing-samples/release-notes.adoc
+++ b/modules/ROOT/pages/writing-samples/release-notes.adoc
@@ -11,5 +11,5 @@ Release notes to the fictional RTFM-Industries release (v1.1.0) are below. For m
 
 [source,HTML]
 ----
-includes::example$release-notes.html
+includes::example$release-notes.html[]
 ----
