update hugo wording

--- a/modules/ROOT/pages/tools/hugo.adoc
+++ b/modules/ROOT/pages/tools/hugo.adoc
@@ -50,19 +50,19 @@ Flexibility is an asset, and the ability to fine-tune templates to handle a vari
 
 Hugo pages use front matter to set values you can parse and refer to as metadata in a variety of ways. Standard values for front matter are `Title`, `Description`, `Date`, and `Author` for example. You can further define metadata in front matter however best suits your needs. 
 
-My favorite ways to use front matter in Hugo are for content reuse, such as with the xref:_getpage_method[.GetPage method] or by grouping content with xref:#_taxonomies[taxonomies].
+Two notable features that make use of front matter are the xref:_getpage_method[.GetPage method] for content reuse and xref:#_taxonomies[taxonomies] for grouping similar content.
 
 === .GetPage method
 
-Reuse content you've already written by grabbing it with the `.GetPage` method in Hugo. A classic example of this is when you want to introduce a feature on release notes already written elsewhere. By storing this description in the feature's front matter, you only need to maintain it in one place.
+Reuse content you've already written by grabbing it with the `.GetPage` method in Hugo. For example, say you want to reuse an existing feature description in your release notes. By storing this description in the feature page's front matter, you only need to maintain it there. You can reference it in the release notes as a parameter.
 
-.Feature xyz's front matter
+.Feature xyz's front matter defined on feature page
 [source, yaml]
 ----
 ---
 Title: "Feature xyz"
 Author: "technicallyawriter"
-Description: "Feature xyz is the solution to all your problems..."
+Description: "Feature xyz is the solution to all your problems. You'll soon forget all your troubles."
 ---
 ----
 
@@ -74,7 +74,7 @@ include::example$hugo/front-matter-reuse.html[]
 
 === Taxonomies
 
-Group similar content with taxonomies like "tags." Hugo automatically generates a page at `/tags/<tag-name>/` for each tag you define. Setup a workflow for users to explore tags by completing the following steps.
+Group similar content with taxonomies like "tags." Hugo automatically generates a page at `/tags/<tag-name>/` for each tag you define. Setup a workflow where users can explore tags by completing the following steps.
 
 First, define a "tags" taxonomy in your `hugo.toml` file like so:
 
@@ -89,13 +89,14 @@ Then, add whatever tags you'd like to a content page, for example "best practice
 [source, yaml]
 ----
 ---
-Title: "Feature XYZ"
+Title: "Feature xyz"
 Author: "technicallyawriter"
+Description: "Feature xyz is the solution to all your problems. You'll soon forget all your troubles."
 Tags: "best practice"
 ---
 ----
 
-Finally, update your page template to display a page's tags. If a user clicks the "best practice" tag, they're redirected to `/tags/best-practice/`.
+Finally, update your page template to display a page's tags. If a user clicks the "best practice" tag, they're redirected to `/tags/best-practice/` which lists all pages with this tag assigned in the front matter.
 
 [source, Go (Hugo templating)]
 ----
