attempt rel path again

--- a/modules/ROOT/pages/tools/vale.adoc
+++ b/modules/ROOT/pages/tools/vale.adoc
@@ -7,7 +7,7 @@ image:icons/vale.png[Vale in terminal,500,auto]
 introduce
 
 ----
-include::../../../styles/config/vocabularies/portfolio/accept.txt[]
+include::/../styles/config/vocabularies/portfolio/accept.txt[]
 ----
 
 
