--- a/modules/ROOT/pages/tools/vale.adoc
+++ b/modules/ROOT/pages/tools/vale.adoc
@@ -7,7 +7,7 @@ image:icons/vale.png[Vale in terminal,500,auto]
 introduce
 
 ----
-include::https://github.com/technicallyawriter/portfolio/raw/main/styles/config/vocabularies/portfolio/accept.txt[]
+include::/home/technicallyawriter/git/portfolio/styles/config/vocabularies/portfolio/accept.txt[]
 ----
 
 
