--- a/modules/ROOT/pages/tools/vale.adoc
+++ b/modules/ROOT/pages/tools/vale.adoc
@@ -6,6 +6,7 @@ image:icons/vale.png[Vale in terminal,500,auto]
 
 introduce
 
+[source, txt]
 ----
 include::example$vale/vocab.txt[]
 ----
@@ -15,6 +16,7 @@ include::example$vale/vocab.txt[]
 
 .vale.ini
 
+[source, ini]
 ----
 include::example$vale/vale.ini[]
 ----
