--- a/modules/ROOT/pages/tools/vale.adoc
+++ b/modules/ROOT/pages/tools/vale.adoc
@@ -1,5 +1,4 @@
 = Vale
-:source-highlighter: rouge
 image:icons/vale.png[Vale in terminal,500,auto]
 
 == Custom vocabulary
@@ -16,7 +15,8 @@ include::example$vale/vocab.txt[]
 
 .vale.ini
 
-[source, ini]
+[source, properties]
+
 ----
 include::example$vale/vale.ini[]
 ----
